tests/valid/definite/ListAppend_Valid_3.whiley
void System::main([string] args):
    left = [1,2]
    right = [3,4]
    r = left + right
    left = left + [6]
    print str(left)
    print str(right)
    print str(r)
